# uplift-modeling

./: .dockerignore  .gitignore  Dockerfile  MODEL_CARD.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
config/: config.yaml
src/: config.py  data.py  evaluate.py  learners.py
src/api/: main.py  schemas.py
src/causal/: diagnostics.py  estimators.py  graph.py  refute.py  sensitivity.py
src/data/: hillstrom.py  synthetic.py
src/eval/: uplift.py
src/explain/: cate_shap.py
src/policy/: targeting.py
tests/: test_policy.py  test_refute.py  test_synthetic_recovery.py
