[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causal-uplift-engine"
version = "0.1.0"
description = "Production-grade causal uplift modeling: CATE estimation, refutation, policy optimization"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "streamlit>=1.30",
    "dowhy>=0.11",
    "econml>=0.15",
    "shap>=0.44",
    "mlflow>=2.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "httpx>=0.27",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "E702", "E701", "SIM108"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
